--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h2>I'm a Web Developer</h2>
   <hr />
   <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-  <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking Project">
+  <img src="./assets/images/movie-ranking.PNG" height="200" alt="Movie Ranking Project">
   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite previews">
+  <img src="./assets/images/birthday-invite.PNG" height="200" alt="birthday invite previews">
   <hr />
   <h4><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact me</a></h4>
   <h2></h2>
